# wholabass

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  LICENSE  README.md  SPEC.md  index.html  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ml/: progress.py  pyproject.toml  server.py
ml/pipeline/: __init__.py  beats.py  download.py  models.py  separate.py  transcribe.py
ml/tests/: test_beats.py  test_download.py  test_separate.py  test_server.py  test_transcribe.py
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ids.rs  ipc.rs  lib.rs  library.rs  main.rs
src-tauri/tests/: sidecar_ping.rs
src/audio/: engine.test.ts  engine.ts  midi-synth.test.ts  midi-synth.ts  midi.ts
src/components/: LibraryScreen.tsx  PianoRoll.tsx  Player.tsx  PlayerScreen.tsx  StemMixer.tsx  Tab.tsx  ThemeToggle.tsx
src/components/ui/: index.ts
src/styles/: global.css
src/tab/: optimizer.test.ts  optimizer.ts  render.test.ts  render.ts  rhythm.test.ts  rhythm.ts
src/theme/: global-css.ts  keyframes.ts  mode.ts
src/theme/recipes/: index.ts
tasks/: checkpoint.md  plan.md  todo.md
